fix(web): prevent page content from overlapping the header

--- a/web/style.css
+++ b/web/style.css
@@ -7,8 +7,6 @@
 }
 
 html {
-	height: 100%;
-	width: 100%;
 	padding: 0;
 	margin: 0;
 }
@@ -32,6 +30,7 @@ body {
 	padding: 0 10%;
 	align-items: center;
 	display: flex;
+	z-index: 1
 }
 
 a {
